create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1860,10 +1860,10 @@ body {
 .cid-rq0wJXBV2b {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #000000;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rq0wJXBV2b .mbr-section-text {
-  color: #efefef;
+  color: #000000;
 }
 .cid-rq0wJXBV2b .mbr-section-subtitle {
   color: #efefef;
@@ -1925,10 +1925,10 @@ body {
 .cid-rq2mQpDB0b {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #000000;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rq2mQpDB0b .mbr-section-text {
-  color: #efefef;
+  color: #000000;
 }
 .cid-rq2mQpDB0b .mbr-section-subtitle {
   color: #ffffff;
